<resources>
    <string name="app_name">Wiini</string>
    <string name="upload_text">Upload your file</string>
    <string name="upload_button_value">Upload</string>
    <string name="saved_audios_button_value">Saved Audios</string>
    <string name="play_audio_header">Play Audio</string>
    <string name="saved_audios_header">Saved Audios</string>

    \<string name="scroll_view_dummy_text">
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s
        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
        It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing
        software like Aldus PageMaker including versions of Lorem Ipsum. \p\p
        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
        The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here\',
        making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text,
        and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by
        accident, sometimes on purpose (injected humour and the like).

    </string>
    <string name="sign_in_text">Sign In</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="main_app_button_value">Main App</string>
    <string name="server_client_id">150611963076-3lfrrneek1eig6rk25ofdavtbles48jn.apps.googleusercontent.com</string>
</resources>